<resources>
    <string name="app_name">My Application</string>
    <string name="editTextHint">Enter car\'s model</string>
    <string name="ButtonAddText">Add</string>
    <string name="ButtonView">View</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="add_new">Add new</string>
    <string name="delete_selected">Delete selected</string>
    <string name="edit_selected">Edit selected</string>
    <string name="find">Find</string>
    <string name="delete_record">Удалить запись</string>
    <string name="editText_hint">Сюда писать</string>
    <string name="hint_enter_el">Введите элемент</string>
    <string name="save_text">Сохранить</string>
    <string name="cancel_text">Отмена</string>
</resources>