<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#834C4C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/table_row1"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_weight="0.004">

            <ListView
                android:id="@+id/listView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="2dp"
                android:background="#8349EA"
                android:choiceMode="multipleChoice"
                android:minHeight="50dp" />
        </TableRow>

        <TableRow
            android:id="@+id/table_row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1">

            <EditText
                android:id="@+id/editText"
                android:layout_width="198dp"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:autofillHints="something"
                android:background="#8552E1"
                android:ems="10"
                android:hint="@string/editTextHint"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColorHint="#FAFAFA" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:text="@string/ButtonAddText" />

            <Button
                android:id="@+id/buttonToast"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="18dp"
                android:text="@string/ButtonView" />

        </TableRow>

        <TableRow
            android:id="@+id/table_row3"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:id="@+id/checkBoxSelectAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@color/purple_500"
                android:text="@android:string/selectAll"
                android:textColor="@color/white"
                android:onClick="onCheckboxClicked"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>